feat: add resume service on backend
